fixing collapse

--- a/src/assets/sass/pages/_product.scss
+++ b/src/assets/sass/pages/_product.scss
@@ -289,6 +289,7 @@
       width: 100%;
       margin-top: $unit-layout * 1;
       .title {
+        cursor: pointer;
         font-size: rem(16px);
         font-weight: 300;
         color: $brand-color;
